update: resend code and verify code
